--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@samrd/uxc-cli",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/cli.js",
   "scripts": {
     "test": "mocha --require @babel/register 'tests/*spec.js'",
     "e2e": "mocha --require @babel/register tests/e2e/cli-e2e.js"
@@ -26,26 +26,26 @@
   "author": "Sameer Deshpande",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.2",
+    "inquirer": "^7.0.0",
+    "listr": "^0.14.3",  
+    "ncp": "^2.0.0",
+    "esm": "^3.2.25"
+  },
+  "devDependencies": {
+    "bdd-stdin": "^0.2.0",
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "arg": "^4.1.1",
-    "bdd-stdin": "^0.2.0",
     "bluebird": "^3.5.5",
     "chai": "^4.2.0",
-    "chalk": "^2.4.2",
     "concat-stream": "^2.0.0",
-    "esm": "^3.2.25",
     "fs-extra": "^8.1.0",
-    "inquirer": "^7.0.0",
     "jasmine": "^3.4.0",
-    "listr": "^0.14.3",
     "mocha": "^6.2.0",
     "mock-stdin": "^0.3.1",
-    "ncp": "^2.0.0",
-    "pkg-install": "^1.0.0",
     "sinon": "^7.4.2",
     "sinon-chai": "^3.3.0"
   }
