--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/cli.js",
   "scripts": {
     "test": "mocha --require @babel/register 'tests/*spec.js'",
-    "e2e": "mocha --require @babel/register tests/e2e/cli-e2e.js"
+    "e2e": "mocha --require @babel/register tests/e2e/cli-e2e.js",
+    "coverage": "nyc --reporter=html npm run test"
   },
   "bin": {
     "@samrd/uxc": "bin/uxc",
@@ -28,17 +29,19 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "inquirer": "^7.0.0",
-    "listr": "^0.14.3",  
+    "listr": "^0.14.3",
     "ncp": "^2.0.0",
     "esm": "^3.2.25"
   },
   "devDependencies": {
-    "bdd-stdin": "^0.2.0",
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.5",
+    "@istanbuljs/nyc-config-babel": "^2.1.1",
+    "babel-plugin-istanbul": "^5.2.0",
+    "bdd-stdin": "^0.2.0",
     "bluebird": "^3.5.5",
     "chai": "^4.2.0",
     "concat-stream": "^2.0.0",
@@ -46,6 +49,7 @@
     "jasmine": "^3.4.0",
     "mocha": "^6.2.0",
     "mock-stdin": "^0.3.1",
+    "nyc": "^14.1.1",
     "sinon": "^7.4.2",
     "sinon-chai": "^3.3.0"
   }
