--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/cli.js",
   "scripts": {
-    "test": "mocha --require @babel/register 'tests/*spec.js'",
+    "test": "mocha --require @babel/register 'tests/*-spec.js'",
     "e2e": "mocha --require @babel/register tests/e2e/cli-e2e.js",
     "coverage": "nyc --reporter=html npm run test"
   },
